<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bible</string>

    <string name="manifest_translation">@string/menu_translations</string>
    <string name="manifest_settings">@string/menu_settings</string>
    <string name="manifest_search">@string/menu_search</string>
    <string name="manifest_search_intent">Search in Dove Bible</string>
    <string name="manifest_translation_manifest">Add Translation</string>

    <string name="reading_book">Book</string>
    <string name="reading_chapter">Chapter</string>
    <string name="reading_chapter_intro">Intro</string>
    <string name="reading_verse">Verse</string>
    <string name="reading_show_verses">Verses</string>
    <string name="reading_translation">Translation</string>
    <string name="reading_confirm">Confirm</string>
    <string name="reading_no_chapter_confirm">Translation \"%1$s\" has no \"%2$s\". Do you want to switch and read first chapter?</string>
    <string name="reading_info">Info</string>
    <string name="reading_no_chapter_info">Translation \"%1$s\" has no \"%2$s\".</string>
    <string name="reading_footnote">Footnote</string>
    <string name="reading_cross">Cross reference</string>

    <string name="note">Note</string>
    <string name="note_save">Save</string>
    <string name="note_hint">Note content</string>
    <string name="note_edit">Edit</string>
    <string name="note_delete">Delete</string>

    <string name="action_highlight">@string/menu_highlight</string>
    <string name="action_notes">@string/menu_notes</string>
    <string name="action_share">Share</string>
    <string name="action_share_title">Share verses to..</string>

    <string name="menu_reading">Reading</string>
    <string name="menu_search">Search</string>
    <string name="menu_highlight">Highlight</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_translations">Translations</string>
    <string name="menu_odb_link">Our Daily Bread&#174;</string>
    <string name="menu_plan">Bible in a year</string>
    <string name="menu_votd">Verse of the Day</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About &amp; Donate</string>
    <string name="menu_switch_theme">Switch theme</string>

    <string name="search_hint">Passage or keyword</string>
    <string name="search_translation">Translation</string>
    <string name="search_all">Entire Bible</string>
    <string name="search_old">Old Testament</string>
    <string name="search_new">New Testament</string>
    <string name="search_gospel">Four Gospels</string>
    <string name="search_from">From book</string>
    <string name="search_to">To book</string>
    <string name="search_from_to">from %1$s to %2$s</string>
    <string name="search_clear_history">Clear search history</string>

    <string name="search_result_books">Books</string>
    <string name="search_result_verses">Verses</string>
    <string name="search_result_none">No results</string>
    <string name="search_result_chapters">%1$s, %2$d chapters.</string>

    <string name="translation_hint">Translation or description</string>
    <string name="translation_install">Install</string>
    <string name="translation_update">Update</string>
    <string name="translation_cancel">Cancel</string>
    <string name="translation_uninstall">Uninstall</string>
    <string name="translation_metadata_updated">Translations metadata updated.</string>
    <string name="translation_added">Translation added: %s</string>
    <string name="translation_delete_confirm">Delete Translation \"%s\"?</string>
    <string name="translation_copyright_message">Translation isn\'t authorized by copyright owner.\n\nPlease help to get authorization or <a href="https://github.com/jianyv/bible-data?files=1">download manually</a>.</string>

    <string name="settings_language">Language</string>
    <string name="settings_language_auto">Auto</string>
    <string name="settings_fontsize">Font size (%s)</string>
    <string name="settings_fontsize_reset">Default</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_red">Red letter</string>
    <string name="settings_red_summary">For words of Jesus, if available</string>
    <string name="settings_cross">@string/reading_cross</string>
    <string name="settings_cross_summary">If available</string>
    <string name="settings_justify">Text justified</string>
    <string name="settings_font_family">Font family</string>
    <string name="settings_auto_copy">Auto copy</string>
    <string name="settings_auto_copy_summary">Copy to clipboard after selection</string>
    <string name="settings_shangti">Shangti</string>
    <string name="settings_shangti_summary">Shangti / Shen (for Chinese Translation)</string>

    <string name="feedback_message">Feel free to send feedback. If you find any bugs, please tap \"Report bug\".\n\nIf you want read more Translations, please find on <a href="https://www.biblegateway.com/versions/">Bible Gateway</a> or <a href="https://bibles.org/versions">bibles.org</a>, then email with the link.</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_report_bug">Report bug</string>

    <string name="annotation_search">@string/note_hint</string>
    <string name="annotation_sort_by_time">Sort by time</string>
    <string name="annotation_sort_by_book">Sort by books</string>
    <string name="annotation_no_book">No \"%1$s\" in Translation \"%2$s\".</string>

    <string name="odb_url_prefix">odb</string>
    <string name="odb_previous">Previous day</string>
    <string name="odb_next">Next day</string>
    <string name="odb_about">About</string>
    <string name="odb_about_detail">Throughout the day, in countless locations and in dozens of countries around the world, Our Daily Bread is read by millions of people. And for every person who opens its pages, one thing is always true: It points to the joy of a relationship with Jesus Christ and the timeless wisdom found in God’s holy Word.\n\nOur Daily Bread is published and distributed worldwide in more than 55 languages by affiliated ministries around the globe.</string>
    <string name="odb_copyright">&#169; Our Daily Bread Ministries (Requires internet)</string>
    <string name="votd_copyright">&#169; Bible Gateway</string>

    <string name="settings_interface">Interface</string>
    <string name="settings_translation">Translation</string>
    <string name="settings_other">Other</string>

    <string name="about_about">About</string>
    <string name="about_donate">Donate</string>
    <string name="about_donate_hide">Hide donate</string>
    <string name="about_donate_show">Show donate</string>
    <string name="about_donate_title">Feel free to donate</string>
    <string name="about_donate_1">1 Manna</string>
    <string name="about_donate_3">3 Manna</string>
    <string name="about_donate_5">5 Manna</string>
    <string name="about_donate_play">Thanks for donating %d Manna via Play Store</string>
    <string name="about_donate_of_stock">%d Manna is out of stock</string>
    <string name="about_detail" formatted="false">
        <![CDATA[
        <h1>Dove Bible is clearly offline, and just free.</h1>
        <p>The dove is a symbol for both meekness and purity, and the Holy Spirit descend out of the heavens and reset upon Jesus in the form of a dove. —— TPT, Matthew 3:16</p>

        <p>Most modern Bible Translations (including TPT) are copyrighted to make sure that translators are fairly reimbursed for their hard work.</p>

        <p>Feel free to donate, and you can refund in 1 month. For donation, Google Play will take 30% as transaction fee, then at least 30% will be donate to Bible Translations copyright owner.</p>

        <p>Our Daily Bread&reg; is from <a href="https://ourdailybread.org/">Our Daily Bread Ministries</a>, and thanks them for &quot;Bible in a year&quot;. &quot;Verse of the Day&quot; is from <a href="https://www.biblegateway.com/usage/votd/votdlist/">Bible Gateway</a>.</p>
        <p>Dove Bible is developed by Jianyu Studio since 2012, and renamed in 2018. Dove Bible depends on <a href="https://developer.android.com/studio/">Android&trade; SDK</a>, <a href="https://developer.android.com/jetpack/androidx/">AndroidX</a>, some features require <a href="https://open.weixin.qq.com">Wechat SDK for Android</a>. Creative Commons License Icons (in Translations page) are from <a href="https://creativecommons.org/about/downloads/">Downloads - Creative Commons</a>.
        <a href="https://software.sil.org/gentium/">Gentium Plus</a> fonts are used under the terms of the <a href="https://scripts.sil.org/ofl">SIL Open Font License</a>.
        </p>

        <p>Our Daily Bread is a trademark of Our Daily Bread Ministries. Android, Google Play are trademarks of Google LLC.</p>
        &copy; 2018 Nanjing Jianyu Network Technology Studio
        ]]>
    </string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string name="plan_date_pattern">MMM d</string>

</resources>