<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/main_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_reading"
            android:icon="@drawable/ic_chrome_reader_mode_black_24dp"
            android:title="@string/menu_reading" />

        <item
            android:id="@+id/menu_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_search" />

        <item
            android:id="@+id/menu_highlight"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/menu_highlight" />

        <item
            android:id="@+id/menu_notes"
            android:icon="@drawable/ic_speaker_notes_black_24dp"
            android:title="@string/menu_notes" />

        <item
            android:id="@+id/menu_download"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/menu_translations" />
    </group>

    <group
        android:id="@+id/odb"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_webview"
            android:icon="@drawable/ic_local_florist_black_24dp"
            android:title="@string/menu_odb_link" />

    </group>


    <group
        android:id="@+id/option_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/menu_feedback"
            android:checkable="false"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/menu_feedback" />

        <item
            android:id="@+id/menu_about"
            android:enabled="false"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/menu_about" />
    </group>

    <group android:id="@+id/about">

        <item
            android:enabled="false"
            android:title="@string/build_version" />

    </group>

</menu>