<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_highlight"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/action_highlight"
        app:iconTint="@color/grey_50"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_notes"
        android:icon="@drawable/ic_speaker_notes_black_24dp"
        android:title="@string/action_notes"
        app:iconTint="@color/grey_50"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/action_share"
        app:iconTint="@color/grey_50"
        app:showAsAction="ifRoom" />

</menu>